--- a/Application/Website/Jumbleblocks.Website/Views/BlogPost/BlogPostListing.cshtml
+++ b/Application/Website/Jumbleblocks.Website/Views/BlogPost/BlogPostListing.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Jumbleblocks.Website.Models.BlogPost.BlogPostListingItemModel>
+﻿@using Jumbleblocks.Core.Security;
+
+@model IEnumerable<Jumbleblocks.Website.Models.BlogPost.BlogPostListingItemModel>
 
 @{
     ViewBag.Title = "ArticleListing";
@@ -7,22 +9,28 @@
 
 <h2>All Published Articles</h2>
 
+@{
+    bool canEditPost = User.CanPerformOperation("Edit Blog Post");
+    bool canDeletePost = User.CanPerformOperation("Delete Blog Post");
+}
+
 <div class="articleListingTable">
    <ul class="articleListingRow articleListingHeader">
        <li class="articleListingCell">Id</li> 
        <li class="articleListingCell">Title</li> 
        <li class="articleListingCell">Publication Date</li> 
        <li class="articleListingCell">Authors Name</li>
-       <li class="articleListingCell"></li>
+       @if(canEditPost) { <li class="articleListingCell"></li> }
+       @if (canDeletePost) { <li class="articleListingCell"></li> }
    </ul>
 
    @{
        bool isOddRow = true;
-   
-       foreach(var actualModel in Model)
+
+       foreach (var actualModel in Model)
        {
            isOddRow = !isOddRow;
-           
+
            var rowClassName = isOddRow ? "odd" : "even";
        
            <ul class="articleListingRow @rowClassName">
@@ -30,7 +38,8 @@
                <li class="articleListingCell">@actualModel.Title</li>
                <li class="articleListingCell">@actualModel.PublishedDate.ToString("dd/MM/yyyy")</li>
                <li class="articleListingCell">@actualModel.AuthorsName</li>
-               <li class="articleListingCell">@Html.ActionLink("Edit", "Edit", new { blogPostId = actualModel.BlogPostId})</li>
+               @if (canEditPost) { <li class="articleListingCell">@Html.ActionLink("Edit", "Edit", new { blogPostId = actualModel.BlogPostId })</li>}
+               @if (canDeletePost) { <li class="articleListingCell">@Html.ActionLink("Delete", "Delete", new { blogPostId = actualModel.BlogPostId })</li>}
            </ul>
        }                                                                               
    }
