--- a/Application/Website/Jumbleblocks.Website/Views/Shared/_Layout.cshtml
+++ b/Application/Website/Jumbleblocks.Website/Views/Shared/_Layout.cshtml
@@ -1,14 +1,27 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿@using System.Configuration;
+@using Jumbleblocks.Website;
+@using Jumbleblocks.Website.Configuration;
+
+<!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>@ViewBag.Title</title>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.7.2.js")" ></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jumbleblocks-ui.js")" ></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <link rel="Stylesheet" type="text/css" href="@Url.Content("~/Content/Site.css")" />
 </head>
 
 <body>
     <header>
-        <a href="@Url.Action("Index", "BlogPost")"><img src="@Url.Content("~/BlogImages/Jumbleblocks2.png")" alt="site logo" /></a>
+    @{
+        var blogConfigurationSection = (BlogConfigurationSection)ConfigurationManager.GetSection(BlogContants.BlogSettingsConfigName);
+        var titleImage = blogConfigurationSection.TitleImagePath;
+    }
+
+        <a href="@Url.Action("Index", "BlogPost")"><img src="@Url.Content(titleImage)" alt="site logo" /></a>
     </header>
 
      @RenderBody()
