--- a/Application/Website/Jumbleblocks.Website/Views/BlogPost/CreateEdit.cshtml
+++ b/Application/Website/Jumbleblocks.Website/Views/BlogPost/CreateEdit.cshtml
@@ -46,6 +46,8 @@
 
 @using (Html.BeginForm("Save", "BlogPost"))
 {
+     @Html.AntiForgeryToken()
+
     <fieldset>
        @if (Model != null)
        {
