--- a/Application/Website/Jumbleblocks.Website/Views/Shared/_Layout.cshtml
+++ b/Application/Website/Jumbleblocks.Website/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="Stylesheet" type="text/css" href="@Url.Content("~/Content/Site.css")" />
 </head>
 
-<body>
+<body class="centreContent">
     <header>
     @{
         var blogConfigurationSection = (BlogConfigurationSection)ConfigurationManager.GetSection(BlogContants.BlogSettingsConfigName);
